fix(css): permet d'éviter le décalage entre les pages qui ont une scrollbar et celles qui n'en ont pas (#1607)

--- a/front/src/styles/general.scss
+++ b/front/src/styles/general.scss
@@ -28,6 +28,10 @@
   border: 0;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 @media screen {
   html {
     background-color: $main-background-color;
